--- a/Argubot/UI/package.json
+++ b/Argubot/UI/package.json
@@ -1,47 +1,42 @@
 {
-  "name": "argubot-ui",
+  "name": "sir-interruptsalot-ui",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "build:check": "tsc -b && vite build",
-    "lint": "eslint .",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "backend": "cd backend && python -m uvicorn app:app --reload --port 8000",
-    "start": "concurrently \"npm run backend\" \"npm run dev\"",
-    "setup-backend": "cd backend && pip install -r requirements.txt",
-    "deploy": "npm run build && npm run deploy:netlify",
-    "deploy:netlify": "npx netlify deploy --prod --dir=dist",
-    "deploy:vercel": "npx vercel --prod",
-    "deploy:surge": "npx surge dist/ argubot-ui.surge.sh"
+    "backend": "cd backend && uvicorn app:app --host 0.0.0.0 --port 8000",
+    "start": "concurrently \"npm run dev\" \"npm run backend\"",
+    "setup-backend": "cd backend && pip install -r requirements.txt"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.1.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "framer-motion": "^11.11.17",
-    "lucide-react": "^0.468.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "tailwind-merge": "^2.5.4"
+    "clsx": "^2.0.0",
+    "framer-motion": "^10.16.4",
+    "lucide-react": "^0.292.0",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss-animate": "^1.0.7",
+    "concurrently": "^8.2.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.17.0",
-    "@types/react": "^18.3.17",
-    "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.20",
-    "concurrently": "^8.2.2",
-    "eslint": "^9.17.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
-    "globals": "^15.14.0",
-    "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.17",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.17.0",
-    "vite": "^6.3.5"
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
+    "@vitejs/plugin-react": "^4.1.0",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.53.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.4",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.2.2",
+    "vite": "^4.5.0"
   }
 }
