--- a/Argubot/UI/backend/render.yaml
+++ b/Argubot/UI/backend/render.yaml
@@ -3,10 +3,13 @@ services:
     name: sir-interruptsalot-backend
     env: python
     plan: free
-    buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn app:app --host 0.0.0.0 --port $PORT
+    buildCommand: pip install -r Argubot/UI/backend/requirements.txt
+    startCommand: uvicorn Argubot.UI.backend.app:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: ANTHROPIC_API_KEY
         sync: false
       - key: SERPER_API_KEY
-        sync: false 
+        sync: false
+    buildFilter:
+      paths:
+        - Argubot/UI/backend/** 
