--- a/Argubot/UI/render.yaml
+++ b/Argubot/UI/render.yaml
@@ -17,7 +17,7 @@ services:
     name: sir-interruptsalot-frontend
     env: static
     plan: free
-    buildCommand: cd Argubot/UI && npm install && npm run build
+    buildCommand: cd Argubot/UI && npm install --legacy-peer-deps && npm run build
     staticPublishPath: Argubot/UI/dist
     envVars:
       - key: VITE_API_BASE_URL
