--- a/Argubot/UI/package.json
+++ b/Argubot/UI/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "backend": "cd backend && uvicorn app:app --host 0.0.0.0 --port 8000",
@@ -37,7 +37,8 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
-    "vite": "^4.5.0"
+    "vite": "^4.5.0",
+    "@types/node": "^20.0.0"
   },
   "overrides": {
     "@typescript-eslint/eslint-plugin": "^6.10.0",
